spacing fix to profile.css 320

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -108,7 +108,7 @@
   .profile__info {
   width: 100%;
   max-width: 320px;
-  padding: 30px 0;
+  padding: 30px 0 0;
   align-items: center;
   flex-wrap: wrap;
   flex-direction: row;
